# zlogger

./: Cargo.toml  LICENSE  README.md
.github/workflows/: test.yml
examples/: basic_usage.rs
src/: colors.rs  config.rs  formatter.rs  lib.rs  logger.rs  rotation.rs
